# backend

./: AGENTS.md  Cargo.toml  Dockerfile  README.md  docker-compose.yaml
api/: Cargo.toml  build.rs
api/src/: main.rs  result.rs  serde_utils.rs  server.rs
api/src/auth/: access_token.rs  cur_identity.rs  cur_user.rs  error.rs  identity.rs  mod.rs  oidc.rs
api/src/permissions/: deployments.rs  envs.rs  mod.rs  site.rs
api/src/routes/: auth.rs  deployment_permissions.rs  deployment_resource_types.rs  deployment_resources.rs  deployment_tasks.rs  deployments.rs  env_user_permissions.rs  envs.rs  helm_charts.rs  helm_registries.rs  k8s_clusters.rs  k8s_resources.rs  metrics.rs  mod.rs  openapi.rs  secrets.rs  status.rs  users.rs  ws.rs
auth/: Cargo.toml
auth/src/: access_token.rs  actix_traits.rs  api_token.rs  error.rs  identity.rs  lib.rs  oidc.rs  user_token.rs
chart-discovery/: Cargo.toml
chart-discovery/src/: charts.rs  ecr_events.rs  kind.rs  main.rs  oci_poll.rs  registries.rs  sqs.rs  tag_parser.rs
chart-ext/: Cargo.toml
chart-ext/src/: actions.rs  collection.rs  error.rs  ext_type.rs  features.rs  lib.rs  serde_utils.rs  values_ui.rs  versions.rs
chart-ext/src/actions/: mod.rs  v0.rs  v1.rs  v1beta1.rs
chart-ext/src/features/: mod.rs  v0.rs  v1.rs  v1beta1.rs  v1beta2.rs
chart-ext/src/resource_types/: mod.rs  v1.rs  v1beta1.rs
chart-ext/tests/: fake_db.rs  utils.rs  v0_values_collection.rs  v0_values_filtered_collection.rs  v0_values_hidden_required_input.rs  v0_values_plain.rs  v1_values_bad.rs  v1_values_plain.rs  v1beta1_values_bad.rs  v1beta1_values_plain.rs  v1beta2_values_bad.rs  v1beta2_values_good.rs
db/: Cargo.toml
db/migrations/0000-00-00-000001-notify-function/: up.sql
db/migrations/2021-03-14-120000-add-users-table/: up.sql
db/migrations/2021-03-14-120500-add-envs-table/: up.sql
db/migrations/2021-03-14-121000-env-user-permissions/: up.sql
db/migrations/2021-03-14-141500-add-k8s-clusters/: up.sql
db/migrations/2021-03-17-120900-add-helm-tables/: up.sql
db/migrations/2021-03-17-152800-add-deployment-table/: up.sql
db/migrations/2021-04-01-171100-deployment-tasks/: up.sql
db/migrations/2021-10-05-100900-deployment-permissions/: up.sql
db/migrations/2021-11-06-101500-settings-tale/: up.sql
db/migrations/2021-11-10-120700-add-secrets-table/: up.sql
db/migrations/2022-02-13-163600-k8s-resources-table/: up.sql
db/migrations/2022-03-11-102600-deployment-resources/: up.sql
db/migrations/2022-03-17-110600-deploymen-resources-constraints/: up.sql
db/migrations/2022-04-14-074500-cluster-grafana-fields/: up.sql
db/migrations/2022-04-20-164500-cluster-domain-tls-secret/: up.sql
db/migrations/2022-04-21-173000-deployment-task-cluster/: up.sql
db/migrations/2022-04-22-093800-unique-env-name/: up.sql
db/migrations/2022-04-22-234000-deployment-auth/: up.sql
db/migrations/2022-04-23-121500-auto-add-users-to-env/: up.sql
db/migrations/2022-05-27-123300-helm-tag-format/: up.sql
db/migrations/2022-06-22-203300-k8s-resource-cluster-id/: up.sql
db/migrations/2022-07-23-103300-helm-registry-kind/: up.sql
db/migrations/2022-09-03-105000-cluster-ingress-class/: up.sql
db/migrations/2022-10-02-140158-deployment-tasks-indices/: down.sql  up.sql
db/migrations/2023-01-16-082916_add-tokens-table/: down.sql  up.sql
db/migrations/2023-05-23-092404_k8s-clusters-ignored-by-default/: down.sql  up.sql
db/migrations/2023-07-24-112654_allow-deactivating-user/: down.sql  up.sql
db/migrations/2023-09-04-120624_deployment_tasks_status_cluster_id_indices/: down.sql  up.sql
db/migrations/2023-10-11-120347_spesific-db-notifications/: down.sql  up.sql
db/migrations/2023-11-21-144147_support-scheduled-tasks/: down.sql  up.sql
db/migrations/2023-12-15-095608_add-deployment-kinds-table/: down.sql  up.sql
db/migrations/2024-01-31-145515_add-deployment-tasks-index/: down.sql  up.sql
db/migrations/2024-02-17-195400-cancel-deployment-tasks/: down.sql  up.sql
db/migrations/2024-08-28-202600-deployment-kind-only-id/: down.sql  up.sql
db/migrations/2024-08-31-095523-deployment-kind-triggers/: down.sql  up.sql
db/migrations/2024-08-31-102801-deployment-kind-not-null/: down.sql  up.sql
db/migrations/2024-08-31-105935-add-bots/: down.sql  up.sql
db/migrations/2024-09-11-173524-add-bot-tokens/: down.sql  up.sql
db/migrations/2026-05-09-120000_helm_registry_provider/: down.sql  up.sql
db/migrations/2026-06-13-184500_db-events-env-id/: down.sql  up.sql
db/migrations/2026-06-14-190000_ws-env-id-generic-trigger/: down.sql  up.sql
db/migrations/2026-06-14-191000_env-deployment-count-events/: down.sql  up.sql
db/src/: access.rs  config.rs  db_table.rs  errors.rs  events.rs  identity.rs  json_diff.rs  lib.rs  pagination.rs  stats.rs  tls.rs  ui_collection.rs
db/src/models/: deployment.rs  deployment_resource.rs  deployment_resource_type.rs  deployment_task.rs  env_user_permission.rs  helm_chart.rs  helm_chart_actions.rs  mod.rs  setting.rs
db/src/schema/: bot.rs  bot_token.rs  deployment.rs  deployment_kind.rs  deployment_permission.rs  deployment_resource.rs  deployment_resource_type.rs  deployment_status.rs  deployment_task.rs  env.rs  env_user_permission.rs  helm_chart.rs  helm_registry.rs  helm_tag_format.rs  k8s_cluster.rs  k8s_resource.rs  mod.rs  secret.rs  setting.rs  user.rs  user_token.rs
db/tests/: tls_modes.rs
k8s-agent/: Cargo.toml
k8s-agent/src/: config.rs  main.rs  task_runner.rs  utils.rs
k8s-agent/src/deploy/: install_and_upgrade.rs  invoke_action.rs  mod.rs  (+1 more)
resource-sync/: Cargo.toml
resource-sync/src/: config.rs  main.rs  task.rs
rusoto-utils/: Cargo.toml
rusoto-utils/src/: creds.rs  lib.rs  regions.rs  sqs.rs
status-updates/: Cargo.toml
status-updates/src/: events.rs  main.rs  status_config.rs  tracker.rs
task-runner/: Cargo.toml
task-runner/src/: config.rs  main.rs  task_runner.rs
ui-schema/: Cargo.toml
ui-schema/src/: collection.rs  lib.rs  ui_schema.rs
ui-schema/tests/: fake_db.rs  test_collection.rs  test_hidden_required_input.rs  test_plain_values.rs
(+108 files in other folders)
