[workspace]
members = [
  "api",
  "auth",
  "chart-discovery",
  "db",
  "k8s-agent",
  "resource-sync",
  "status-updates",
]
resolver = "2"

[profile.release]
debug = true

[workspace.dependencies.platz-chart-ext]
features = ["utoipa"]
version = "0.6.1"

[workspace.dependencies.tracing-subscriber]
features = ["env-filter", "fmt"]
version = "0.3.19"

[workspace.dependencies.prometheus]
version = "0.13.4"
