[workspace]
members = [
  "api",
  "auth",
  "chart-discovery",
  "db",
  "k8s-agent",
  "otel",
  "resource-sync",
  "status-updates",
]
resolver = "2"

[profile.release]
debug = true

[workspace.dependencies.platz-chart-ext]
features = ["utoipa"]
version = "0.6.2"

[workspace.dependencies.prometheus]
version = "0.14.0"
