[workspace]
members = [
  "api",
  "auth",
  "chart-discovery",
  "db",
  "k8s-agent",
  "otel",
  "resource-sync",
  "status-updates",
]
resolver = "2"

# Shared package metadata inherited by every workspace member via
# `version.workspace = true`. Bumping the release version is a single edit
# here (or `cargo set-version --workspace <VER>`), which keeps all crates —
# and the OpenAPI `info.version` derived from the api crate — in lockstep.
[workspace.package]
version = "0.1.0"

[profile.release]
debug = true

[workspace.dependencies.platz-chart-ext]
features = ["utoipa"]
version = "0.7.1"

[workspace.dependencies.prometheus]
version = "0.14.0"
