[package]
edition = "2021"
name = "platz-api"
version = "0.1.0"

[dependencies]
actix = "0.13.5"
actix-web = { version = "4.9.0", features = ["rustls"] }
actix-web-actors = "4.3.1"
anyhow = { version = "1.0.95", features = ["backtrace"] }
chrono = { version = "0.4.39", default-features = false, features = [
  "std",
  "serde",
] }
clap = { version = "4.5.27", features = ["derive", "env"] }
dotenvy = "0.15.7"
futures = "0.3.31"
humantime = "2.1.0"
itertools = "0.14.0"
lazy_static = "1.5.0"
platz-chart-ext = { workspace = true }
prometheus = { workspace = true }
regex = "1.11.1"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
strum = "0.26.3"
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["rt-multi-thread", "signal"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
tracing = "0.1.41"
tracing-subscriber = { workspace = true }
url = "2.5.4"
utoipa = { version = "5.3.1", features = [
  "actix_extras",
  "chrono",
  "decimal",
  "preserve_order",
  "uuid",
  "yaml",
] }
uuid = { version = "1.12.1", features = ["serde", "v4"] }

[dependencies.platz-db]
path = "../db"

[dependencies.platz-auth]
features = ["actix"]
path = "../auth"
