[package]
edition = "2021"
name = "platz-api"
version = "0.1.0"

[dependencies]
actix = "0.13.5"
actix-web = { version = "4.11.0", default-features = false }
actix-web-actors = "4.3.1"
anyhow = { version = "1.0.98", features = ["backtrace"] }
chrono = { version = "0.4.41", default-features = false, features = [
  "std",
  "serde",
] }
clap = { version = "4.5.41", features = ["derive", "env"] }
dotenvy = "0.15.7"
futures = "0.3.31"
humantime = "2.2.0"
itertools = "0.14.0"
lazy_static = "1.5.0"
platz-chart-ext = { workspace = true }
prometheus = { workspace = true }
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
strum = "0.27.2"
thiserror = "2.0.12"
tokio = { version = "1.47.0", features = ["rt-multi-thread", "signal"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
tracing = "0.1.41"
url = "2.5.4"
utoipa = { version = "5.4.0", features = [
  "actix_extras",
  "chrono",
  "decimal",
  "preserve_order",
  "rc_schema",
  "uuid",
  "yaml",
] }
uuid = { version = "1.17.0", features = ["serde", "v4"] }

[dependencies.platz-auth]
features = ["actix"]
path = "../auth"

[dependencies.platz-db]
path = "../db"

[dependencies.platz-otel]
path = "../otel"
