[package]
edition = "2024"
name = "platz-api"
version = "0.1.0"

[dependencies]
actix = "0.13.5"
actix-web = { version = "4.13.0", default-features = false }
actix-web-actors = "4.3.1"
anyhow = { version = "1.0.102", features = ["backtrace"] }
chrono = { version = "0.4.44", default-features = false, features = [
  "std",
  "serde",
] }
clap = { version = "4.6.1", features = ["derive", "env"] }
dotenvy = "0.15.7"
futures = "0.3.32"
humantime = "2.3.0"
itertools = "0.14.0"
lazy_static = "1.5.0"
platz-chart-ext = { workspace = true }
prometheus = { workspace = true }
regex = "1.12.3"
rustls = "0.23.40"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
strum = "0.28.0"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "signal"] }
tokio-stream = { version = "0.1.18", features = ["sync"] }
tracing = "0.1.44"
url = "2.5.8"
utoipa = { version = "5.5.0", features = [
  "actix_extras",
  "chrono",
  "decimal",
  "preserve_order",
  "rc_schema",
  "uuid",
  "yaml",
] }
uuid = { version = "1.23.1", features = ["serde", "v4"] }

[dependencies.platz-auth]
features = ["actix"]
path = "../auth"

[dependencies.platz-db]
path = "../db"

[dependencies.platz-otel]
path = "../otel"
