[package]
edition = "2021"
name = "platz-auth"
version = "0.1.0"

[features]
actix = ["actix-web", "actix-web-httpauth", "futures"]
default = []

[dependencies]
actix-web = { version = "4.9.0", features = ["rustls"], optional = true }
actix-web-httpauth = { version = "0.8.2", optional = true }
base64 = "0.22.1"
chrono = { version = "0.4.39", default-features = false, features = [
    "std",
    "serde",
] }
clap = { version = "4.5.27", features = ["derive", "env"] }
futures = { version = "0.3.31", optional = true }
jsonwebtoken = "9.3.0"
lazy_static = "1.5.0"
openid = { version = "0.16.1", default-features = false, features = ["rustls"] }
rand = "0.8.5"
serde = { version = "1.0.217", features = ["derive"] }
sha2 = "0.10.8"
thiserror = "2.0.11"
tokio = "1.43.0"
url = "2.5.4"
utoipa = { version = "5.3.1", features = ["preserve_order"] }
uuid = { version = "1.12.1", features = ["serde", "v4"] }

[dependencies.platz-db]
path = "../db"
