[package]
edition = "2024"
name = "platz-auth"
version = "0.1.0"

[features]
actix = ["actix-web", "actix-web-httpauth", "futures"]
default = []

[dependencies]
actix-web = { version = "4.11.0", optional = true }
actix-web-httpauth = { version = "0.8.2", optional = true }
base64 = "0.22.1"
chrono = { version = "0.4.41", default-features = false, features = [
    "std",
    "serde",
] }
clap = { version = "4.5.41", features = ["derive", "env"] }
futures = { version = "0.3.31", optional = true }
jsonwebtoken = "9.3.1"
lazy_static = "1.5.0"
openid = { version = "0.17.0", default-features = false, features = ["rustls"] }
rand = "0.9.2"
serde = { version = "1.0.219", features = ["derive"] }
sha2 = "0.10.9"
thiserror = "2.0.12"
tokio = "1.47.0"
url = "2.5.4"
utoipa = { version = "5.4.0", features = ["preserve_order"] }
uuid = { version = "1.17.0", features = ["serde", "v4"] }

[dependencies.platz-db]
path = "../db"
