[package]
edition = "2024"
name = "platz-auth"
version.workspace = true

[features]
actix = ["actix-web", "actix-web-httpauth", "futures"]
default = []

[dependencies]
actix-web = { version = "4.13.0", optional = true }
actix-web-httpauth = { version = "0.8.2", optional = true }
base64 = "0.22.1"
chrono = { version = "0.4.44", default-features = false, features = [
    "std",
    "serde",
] }
clap = { version = "4.6.1", features = ["derive", "env"] }
futures = { version = "0.3.32", optional = true }
jsonwebtoken = "10.4.0"
lazy_static = "1.5.0"
openid = { version = "0.23.0", default-features = false, features = ["rustls"] }
rand = "0.10.1"
serde = { version = "1.0.228", features = ["derive"] }
sha2 = "0.11.0"
thiserror = "2.0.18"
tokio = "1.52.3"
url = "2.5.8"
utoipa = { version = "5.5.0", features = ["preserve_order"] }
uuid = { version = "1.23.1", features = ["serde", "v4"] }

[dependencies.platz-db]
path = "../db"
