[package]
edition = "2021"
name = "platz-chart-discovery"
version = "0.1.0"

[dependencies]
anyhow = "1.0.95"
aws-config = "1.5.15"
aws-sdk-ecr = "1.60.0"
aws-sdk-sqs = "1.56.0"
aws-smithy-types-convert = { version = "0.60.8", features = ["convert-chrono"] }
aws-types = "1.3.4"
chrono = { version = "0.4.39", default-features = false, features = [
    "std",
    "serde",
] }
clap = { version = "4.5.27", features = ["derive", "env"] }
futures = "0.3.31"
itertools = "0.14.0"
platz-chart-ext = { workspace = true }
regex = "1.11.1"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
titlecase = "3.3.0"
tokio = { version = "1.43.0", features = ["rt-multi-thread", "signal"] }
tracing = "0.1.41"
tracing-subscriber = { workspace = true }
uuid = { version = "1.12.1", features = ["serde", "v4"] }

[dependencies.platz-db]
path = "../db"
