[package]
edition = "2021"
name = "platz-chart-discovery"
version = "0.1.0"

[dependencies]
anyhow = "1.0.98"
aws-config = "1.8.3"
aws-sdk-ecr = "1.87.0"
aws-sdk-sqs = "1.78.0"
aws-smithy-types-convert = { version = "0.60.9", features = ["convert-chrono"] }
aws-types = "1.3.8"
chrono = { version = "0.4.41", default-features = false, features = [
    "std",
    "serde",
] }
clap = { version = "4.5.41", features = ["derive", "env"] }
futures = "0.3.31"
itertools = "0.14.0"
platz-chart-ext = { workspace = true }
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
titlecase = "3.6.0"
tokio = { version = "1.47.0", features = ["rt-multi-thread", "signal"] }
tracing = "0.1.41"
uuid = { version = "1.17.0", features = ["serde", "v4"] }

[dependencies.platz-db]
path = "../db"

[dependencies.platz-otel]
path = "../otel"
