[package]
edition = "2024"
name = "platz-chart-discovery"
version = "0.1.0"

[dependencies]
anyhow = "1.0.102"
aws-config = "1.8.17"
aws-sdk-ecr = "1.116.0"
aws-sdk-sqs = "1.99.0"
aws-smithy-types-convert = { version = "0.60.14", features = ["convert-chrono"] }
aws-types = "1.3.16"
chrono = { version = "0.4.44", default-features = false, features = [
    "std",
    "serde",
] }
clap = { version = "4.6.1", features = ["derive", "env"] }
futures = "0.3.32"
humantime = "2.3.0"
itertools = "0.14.0"
platz-chart-ext = { workspace = true }
regex = "1.12.3"
reqwest = { version = "0.13.3", default-features = false, features = ["json", "rustls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
titlecase = "3.6.0"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "signal"] }
tracing = "0.1.44"
url = { version = "2.5.8", features = ["serde"] }
uuid = { version = "1.23.1", features = ["serde", "v4"] }

[dependencies.platz-db]
path = "../db"

[dependencies.platz-otel]
path = "../otel"
