[package]
edition = "2021"
name = "platz-chart-ext"
version = "0.1.0"

[dependencies]
anyhow = "1.0.56"
async-trait = "0.1.52"
reqwest = {version = "0.11.4", features = ["rustls-tls", "json"]}
rust_decimal = "1.22.0"
serde = {version = "1.0.136", features = ["derive"]}
serde_json = "1.0.79"
serde_yaml = "0.9.9"
strum = {version = "0.24", features = ["derive"]}
strum_macros = {version = "0.24"}
thiserror = "1.0.30"
tokio = {version = "1", features = ["fs", "macros"]}
url = "2.2.2"
uuid = "0.8.2"

[dev-dependencies]
anyhow = "1"
tokio = {version = "1", features = ["rt-multi-thread"]}
uuid = {version = "0.8.2", features = ["v4"]}
