[package]
edition = "2024"
name = "platz-db"
version.workspace = true

[dependencies]
anyhow = "1.0.102"
chrono = { version = "0.4.44", default-features = false, features = [
  "std",
  "serde",
] }
clap = { version = "4.6.1", features = ["env"] }
diesel = { version = "2.2.12", features = [
  "chrono",
  "numeric",
  "serde_json",
  "uuid",
] }
diesel-async = { version = "0.6.1", features = [
  "async-connection-wrapper",
  "bb8",
  "postgres",
] }
diesel_enum_derive = { git = "https://github.com/popen2/diesel-enum-derive", default-features = false, features = [
  "plain",
] }
diesel_filter = { version = "2.0.0", features = ["actix", "serde", "utoipa"] }
diesel_json = "0.3.0"
diesel_migrations = "2.2.0"
diesel_pagination = { version = "2.0.0", features = [
  "diesel-async",
  "serde",
  "utoipa",
] }
itertools = "0.14.0"
lazy_static = "1.5.0"
maplit = "1.0.2"
platz-chart-ext = { workspace = true }
prometheus = { workspace = true }
rust_decimal = { version = "1.42.0", default-features = false, features = [
  "tokio-postgres",
] }
rustls = "0.23.40"
rustls-native-certs = "0.8.4"
rustls-pemfile = "2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
serde_with = "3.20.0"
strum = { version = "0.28.0", features = ["derive"] }
thiserror = "2.0.18"
tokio = "1.52.3"
tokio-postgres = "0.7.17"
tokio-postgres-rustls = "0.14.0"
tracing = "0.1.44"
url = "2.5.8"
utoipa = { version = "5.5.0", features = [
  "chrono",
  "decimal",
  "preserve_order",
  "rc_schema",
  "uuid",
] }
uuid = { version = "1.23.1", features = ["serde", "v4"] }

[dev-dependencies]
rcgen = "0.14.8"
tempfile = "3"
testcontainers = "0.27.3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tokio-postgres = "0.7"
