[package]
edition = "2021"
name = "platz-k8s-agent"
version = "0.1.0"

[dependencies]
anyhow = { version = "1.0.98", features = ["backtrace"] }
aws-arn = "0.3.1"
aws-config = "1.8.3"
aws-sdk-ec2 = "1.152.0"
aws-sdk-eks = "1.99.0"
aws-types = "1.3.8"
base64 = "0.22.1"
chrono = { version = "0.4.41", default-features = false, features = [
  "std",
  "serde",
] }
clap = { version = "4.5.41", features = ["derive", "env"] }
either = "1.15.0"
futures = "0.3.31"
http = "1.3.1"
humantime = "2.2.0"
itertools = "0.14.0"
k8s-openapi = { version = "0.25.0", features = ["v1_33"] }
kube = { version = "1.1.0", default-features = false, features = [
  "client",
  "config",
  "gzip",
  "ws",
  "runtime",
  "rustls-tls",
] }
lazy_static = "1.5.0"
maplit = "1.0.2"
platz-chart-ext = { workspace = true }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
serde_yaml = "0.9.34"
tap = "1.0.1"
thiserror = "2.0.12"
tokio = { version = "1.47.0", features = ["rt-multi-thread", "signal"] }
tokio-stream = "0.1.17"
tokio-util = "0.7.15"
tracing = { version = "0.1.41" }
tracing-subscriber = { workspace = true }
tryhard = "0.5.2"
url = { version = "2.5.4", features = ["serde"] }
uuid = { version = "1.17.0", features = ["serde", "v4"] }

[dependencies.platz-db]
path = "../db"

[dependencies.platz-auth]
path = "../auth"
