[package]
edition = "2021"
name = "platz-resource-sync"
version = "0.1.0"

[dependencies]
anyhow = "1.0.86"
platz-chart-ext = { workspace = true }
tokio = { version = "1.39.3", features = ["rt-multi-thread", "signal"] }
tracing = "0.1.40"
tracing-subscriber = { workspace = true }

[dependencies.platz-db]
path = "../db"
