[package]
edition = "2024"
name = "platz-resource-sync"
version.workspace = true

[dependencies]
anyhow = "1.0.102"
platz-chart-ext = { workspace = true }
tokio = { version = "1.52.3", features = ["rt-multi-thread", "signal"] }
tracing = "0.1.44"

[dependencies.platz-db]
path = "../db"

[dependencies.platz-otel]
path = "../otel"
