[package]
edition = "2021"
name = "rusoto-utils"
version = "0.1.0"

[dependencies]
anyhow = "1"
async-trait = "0.1.48"
log = "0.4"
rusoto_core = {version = "0.47.0", default_features = false, features = ["rustls"]}
rusoto_credential = {version = "0.47.0", default_features = false}
rusoto_ec2 = {version = "0.47.0", default_features = false, features = ["rustls"]}
rusoto_sqs = {version = "0.47.0", default_features = false, features = ["rustls"]}
rusoto_sts = {version = "0.47.0", default_features = false, features = ["rustls"]}
serde = {version = "1", features = ["derive"]}
serde_json = "1"
tokio = {version = "1", features = ["time"]}
