[package]
edition = "2021"
name = "platz-status-updates"
version = "0.1.0"

[dependencies]
anyhow = "1.0.95"
futures = "0.3.31"
platz-chart-ext = { workspace = true }
reqwest = { version = "0.12.12", default-features = false, features = [
    "rustls-tls",
    "json",
] }
tokio = { version = "1.43.0", features = ["rt-multi-thread", "signal"] }
tracing = "0.1.41"
tracing-subscriber = { workspace = true }
url = "2.5.4"
uuid = { version = "1.12.1", features = ["serde", "v4"] }

[dependencies.platz-db]
path = "../db"
