[package]
edition = "2024"
name = "platz-status-updates"
version.workspace = true

[dependencies]
anyhow = "1.0.102"
futures = "0.3.32"
platz-chart-ext = { workspace = true }
reqwest = { version = "0.13.3", default-features = false, features = [
    "rustls",
    "json",
] }
rustls = "0.23.40"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "signal"] }
tracing = "0.1.44"
url = "2.5.8"
uuid = { version = "1.23.1", features = ["serde", "v4"] }

[dependencies.platz-db]
path = "../db"

[dependencies.platz-otel]
path = "../otel"
