[package]
edition = "2021"
name = "platz-ui-schema"
version = "0.1.0"

[dependencies]
async-trait = "0.1.52"
serde = {version = "1.0.136", features = ["derive"]}
serde_json = "1.0.79"
strum = {version = "0.24", features = ["derive"]}
strum_macros = {version = "0.24"}
thiserror = "1.0.30"
uuid = "0.8.2"

[dev-dependencies]
anyhow = "1"
tokio = {version = "1", features = ["macros", "rt-multi-thread"]}
